# sparse_bundle_adjustment

./: CHANGELOG.rst  CMakeLists.txt  package.xml
include/sba/: csparse.h  proj.h  sba.h  sba_file_io.h  sba_setup.h  spa2d.h  visualization.h
include/sparse_bundle_adjustment/: proj.h  sba.h  sba_setup.h  spa2d.h
src/: cholmod_timing.cpp  csparse.cpp  node.cpp  proj.cpp  sba.cpp  sba_file_io.cpp  spa.cpp  spa2d.cpp  visualization.cpp
src/nodes/: sba_node.cpp
